// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field renders custom props 1`] = `
<div
  className="form__field form__field--fluid input"
>
  <label
    className="form__label"
    htmlFor="test"
  >
    test
  </label>
  <input
    className="form__input form__input--invalid"
    id="bora-pra-action"
    name="nameTest"
    onChange={[Function]}
    placeholder=""
    required="false"
    title=""
    type="text"
    value=""
  />
  <span
    className="form__message form__message--invalid space-element-small error"
  >
    Erro!
  </span>
</div>
`;

exports[`Field renders defaultProps 1`] = `
<div
  className="form__field form__field--fluid input"
>
  <label
    className="form__label"
    htmlFor="test"
  >
    test
  </label>
  <input
    className="form__input"
    id="bora-pra-action"
    name="nameTest"
    onChange={[Function]}
    placeholder=""
    required="false"
    title=""
    type="text"
    value=""
  />
  <span
    className="form__message form__message--invalid space-element-small error"
  >
    
  </span>
</div>
`;
